--- a/src/ts/translations/ru/pages_RU.txt
+++ b/src/ts/translations/ru/pages_RU.txt
@@ -25,6 +25,7 @@ export default `
 § page.team.author.description2: Сортировка по умолчанию — это сортировка по количеству задач и группам (текущие, уволенные, помогающие  сотрудники).
 § page.team.author.status: Status
 § page.team.author.firstCommit: First commit
+§ page.team.author.lastCommit: Last
 § page.team.author.daysAll: Total days
 § page.team.author.types: Тип работ
 § page.team.author.commits: Commits
@@ -103,8 +104,9 @@ export default `
 § page.team.tree.change: Кто менял
 § page.team.tree.remove: Кто удалял
 § page.team.tree.line: строк
-§ page.team.tree.lineAdd: добавили
-§ page.team.tree.lineRemove: изменили
+§ page.team.tree.linesAdded: добавили
+§ page.team.tree.linesChanged: изменили
+§ page.team.tree.linesRemoved: удалили
 § page.team.week.title: Статистика по неделям
 § page.team.week.date: Дата
 § page.team.week.numberTasks: Количество задач
@@ -125,6 +127,8 @@ export default `
 § page.team.pr.lastCommitTime: Последний
 § page.team.pr.workDays: Дней разработки
 § page.team.pr.delayDays: Дней ожидания влития
+§ page.team.pr.all.workDays: Время работы над задачей
+§ page.team.pr.all.delayDays: Время ревью PR
 § page.team.pr.commits: Коммиты
 § page.team.pr.date: Дата влития
 § page.team.pr.mergeAuthor: Влил
