--- a/src/ts/translations/ru/pages_RU.txt
+++ b/src/ts/translations/ru/pages_RU.txt
@@ -24,6 +24,7 @@ export default `
 § page.team.author.description1: Часть статистики (скорость работы, затраченные деньги и т.п.) по сотрудникам с типом «Помощник» не считается, т.к. это не постоянная роль в проекте. Их работа незначительно и её можно не учитывать.
 § page.team.author.description2: Сортировка по умолчанию — это сортировка по количеству задач и группам (текущие, уволенные, помогающие  сотрудники).
 § page.team.author.status: Status
+§ page.team.author.company: Company
 § page.team.author.firstCommit: First commit
 § page.team.author.lastCommit: Last
 § page.team.author.daysAll: Total days
