--- a/src/ts/translations/src/templates/pages.txt
+++ b/src/ts/translations/src/templates/pages.txt
@@ -27,7 +27,7 @@ $1 сделано коммитов: $2
 год
 полтора
 два года
-больше
+больше двух лет
 Детализация
 *Часть статистики* (скорость работы, затраченные деньги и т.п.) *по сотрудникам с типом «Помощник» не считается*, т.к. это эпизодическая роль в проекте. Предполагаем, что они не влияют на проект, а их правками можно пренебречь на фоне общего объема работы.
 *Сортировка по умолчанию* — это сортировка по количеству задач и группам (текущие, уволенные, помогающие  сотрудники).
@@ -219,6 +219,26 @@ PR без номера задачи
 Задач
 Дней работы
 Дней до следующего релиза
+Размер текущих команд
+команд
+один сотрудник
+два сотрудника
+три сотрудника
+до шести сотрудников
+до девяти сотрудников
+до 12 сотрудников
+до 15 сотрудников
+больше 15
+Продолжительность проектов
+проекта
+Список проектов
+Код
+Первый коммит
+Последний
+человек
+задач
+Дней работы
+Количество сотрудников
 Фотография
 место для фотографии
 Основные характеристики
