--- a/src/ts/translations/src/templates/pages.txt
+++ b/src/ts/translations/src/templates/pages.txt
@@ -239,6 +239,27 @@ PR без номера задачи
 задач
 Дней работы
 Количество сотрудников
+Скорость закрытия задач
+Поехали!
+Максимальная длинна подписи коммита
+Начать квиз
+Далее
+Ещё раз
+Кто сделал первый коммит?
+Кто закрыл больше задач?
+Кто быстрее всех делает задачи?
+Кто дольше всех работал на проекте?
+Кто меньше всех работал на проекте?
+Кто чаще коммитит?
+Кто реже коммитит?
+У кого саммые длинные подписи коммитов?
+У кого саммые короткие подписи коммитов?
+У кого больше всего дней без коммитов?
+Сколько человек уволилось?
+Сколько человек помогало проекту?
+Сколько максимум задач в день делал $1?
+Задач какого типа больше влили?
+Сколько в среднем дней работают на проекте?
 Фотография
 место для фотографии
 Основные характеристики
